--- a/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/intent-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/intent-edit.component.scss
@@ -3,17 +3,22 @@
 
   .questions {
     overflow-y: auto;
-    max-height: 12rem;
+    max-height: 13rem;
 
     UL {
       padding: 0;
       margin: 0;
       list-style-type: none;
       LI {
-        padding: 0.2rem;
+        padding: 0.4rem;
         border-bottom: 1px solid #bebebe;
         font-style: italic;
       }
     }
+  }
+
+  .token {
+    border-radius: 0.45rem;
+    padding: 0rem 0.3rem 0.1rem 0.3rem;
   }
 }
