--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
@@ -150,7 +150,7 @@
                 class="ellipsis text-muted"
                 [title]="sentence"
               >
-                {{ sentence }}
+                {{ sentence.text }}
               </li>
             </ul>
           </div>
