demo(scenario-list) : scenario history preview

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -39,64 +39,101 @@
   <div></div>
 </div>
 
-<nb-card
+<nb-accordion
   *ngFor="let scenario of scenarios | orderBy: orderBy:orderByReverse:'name'"
   class="mb-2"
 >
-  <nb-card-body class="grid-columns">
-    <div>
-      <div class="font-weight-bold initial-capitalize">
-        {{ scenario.name }}
+  <nb-accordion-item>
+    <nb-accordion-item-header>
+      <div class="grid-columns">
+        <div>
+          <div class="font-weight-bold initial-capitalize">
+            {{ scenario.name }}
+          </div>
+          <span class="text-muted">
+            {{ scenario.description }}
+          </span>
+        </div>
+
+        <div class="initial-capitalize">
+          {{ scenario.category }}
+        </div>
+
+        <div>
+          <nb-tag-list>
+            <nb-tag
+              appearance="filled"
+              *ngFor="let tag of scenario.tags"
+              [text]="tag"
+              status="basic"
+              size="tiny"
+            ></nb-tag>
+          </nb-tag-list>
+        </div>
+
+        <div class="text-right">
+          <button
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="Edit"
+            (click)="edit(scenario)"
+          >
+            <nb-icon icon="edit-outline"></nb-icon>
+          </button>
+          <a
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="Designer"
+            [routerLink]="'./' + scenario.id"
+          >
+            <nb-icon icon="color-palette-outline"></nb-icon>
+          </a>
+          <button
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="Delete"
+            (click)="delete(scenario)"
+          >
+            <nb-icon icon="trash-2-outline"></nb-icon>
+          </button>
+        </div>
       </div>
-      <span class="text-muted">
-        {{ scenario.description }}
-      </span>
-    </div>
-
-    <div class="initial-capitalize">
-      {{ scenario.category }}
-    </div>
-
-    <div>
-      <nb-tag-list>
-        <nb-tag
-          appearance="filled"
-          *ngFor="let tag of scenario.tags"
-          [text]="tag"
-          status="basic"
-          size="tiny"
-        ></nb-tag>
-      </nb-tag-list>
-    </div>
-
-    <div class="text-right">
-      <button
-        nbButton
-        ghost
-        shape="round"
-        nbTooltip="Edit"
-        (click)="edit(scenario)"
+    </nb-accordion-item-header>
+    <nb-accordion-item-body>
+      <div
+        class="d-flex justify-content-between"
+        *ngFor="let version of versions"
       >
-        <nb-icon icon="edit-outline"></nb-icon>
-      </button>
-      <a
-        nbButton
-        ghost
-        shape="round"
-        nbTooltip="Designer"
-        [routerLink]="'./' + scenario.id"
-      >
-        <nb-icon icon="color-palette-outline"></nb-icon>
-      </a>
-      <button
-        nbButton
-        ghost
-        shape="round"
-        nbTooltip="Delete"
-        (click)="delete(scenario)"
-      >
-        <nb-icon icon="trash-2-outline"></nb-icon>
-      </button>
-    </div>
-  </nb-card-body>
-</nb-card>
+        <div
+          class="row"
+          style="width: 100%"
+        >
+          <div class="col-2">
+            <span [ngClass]="{ 'font-weight-bold': version.current }"> {{ version.date }} </span>
+            <nb-icon
+              *ngIf="version.current"
+              status="success"
+              icon="checkmark-outline"
+            ></nb-icon>
+          </div>
+          <div class="text-muted font-italic col">
+            {{ version.description }}
+          </div>
+        </div>
+        <div>
+          <button
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="View"
+          >
+            <nb-icon icon="eye-outline"></nb-icon>
+          </button>
+        </div>
+      </div>
+    </nb-accordion-item-body>
+  </nb-accordion-item>
+</nb-accordion>
