--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -37,6 +37,7 @@
   </div>
   <div>Tags</div>
   <div></div>
+  <div></div>
 </div>
 
 <nb-accordion
@@ -123,14 +124,33 @@
             {{ version.description }}
           </div>
         </div>
-        <div>
+        <div class="d-flex">
           <button
+            *ngIf="version.freezed"
             nbButton
             ghost
             shape="round"
             nbTooltip="View"
           >
             <nb-icon icon="eye-outline"></nb-icon>
+          </button>
+          <button
+            *ngIf="version.freezed"
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="Copy and edit a new version"
+          >
+            <nb-icon icon="copy-outline"></nb-icon>
+          </button>
+          <button
+            *ngIf="!version.freezed"
+            nbButton
+            ghost
+            shape="round"
+            nbTooltip="Edit"
+          >
+            <nb-icon icon="color-palette-outline"></nb-icon>
           </button>
         </div>
       </div>
